<resources>
    <string name="app_name">CalculadoraMC</string>
    <string name="click">Click</string>
    <string name="Hello">Hello world</string>
    <string name="Calculate">Calcular</string>
    <string name="result">Resultado:</string>
    <string name="enter_height">Añadir altura:</string>
    <string name="enter_weight">Seleccionar peso:</string>
    <string name="title">Calcule su Índice de Masa Corporal</string>
    <string name="result_classification_low">Bajo peso</string>
    <string name="result_classification_normal">Peso normal</string>
    <string name="result_classification_height">Sobrepeso</string>
    <string name="result_classification_very_height">Obesidad</string>

    <string name="kg_format">%1$d kg</string>
</resources>