<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="40sp"
            android:textAlignment="center"
            android:background="@color/purple"
            android:textColor="@color/white"
            android:padding="20dp"
            android:layout_weight="2"
            />

        <!-- Height -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="30dp"
            android:gravity="center"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_height"
                android:textSize="30sp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <EditText
                    android:id="@+id/valueHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text="120"
                    android:layout_gravity="center"
                    android:textSize="25dp">
                </EditText>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="cm"
                    android:textSize="25sp"/>
            </LinearLayout>

            <com.google.android.material.slider.Slider
                android:id="@+id/slider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:valueFrom="100"
                android:valueTo="300"
                />
        </LinearLayout>

        <!-- Kilos -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_weight"
                android:textSize="30sp"
                />
            <Button
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?attr/materialIconButtonFilledStyle"
                app:icon="@drawable/ic_add"
                />

            <TextView
                android:id="@+id/valueWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kg_format"
                android:textSize="14pt"/>

            <Button
                android:id="@+id/restButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?attr/materialIconButtonFilledStyle"
                app:icon="@drawable/ic_rest"/>

        </LinearLayout>

        <!-- Calculate -->
        <Button
            android:id="@+id/calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Calculate"
            android:layout_gravity="bottom"
            android:textSize="17pt"
            android:layout_margin="20dp"
            android:layout_weight="1"/>

        <!-- Result -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:layout_weight="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:textSize="16pt"/>
            <TextView
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.00"
                android:textSize="16pt"/>

            <TextView
                android:id="@+id/result_classification"
                android:layout_width="match_parent"
                android:background="@color/purple"
                android:padding="20dp"
                android:text="@string/result_classification_low"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="60sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>